--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,14 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/cleopatra/img"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/cleopatra/css/style.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/cleopatra/js/scripts.js"]
           },
           "configurations": {
             "production": {
